fix: jpg hue error

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -1,7 +1,10 @@
+<h1>Imgpro WebAssembly Test</h1>
 <input type="file" id="file" />
-<input type="button" id="execBtn" value="处理" />
+<input type="button" id="execBtn" value="execute" />
 <div>
-  <pre id="result"></pre>
+  <h1 />
+  <h3>Result:</h3>
+  <pre id="result">{}</pre>
 </div>
 <script src="./wasm_exec.js"></script>
 <script>
