--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <input type="checkbox" class="feature" value="width" checked> width 
   <input type="checkbox" class="feature" value="height" checked> height 
   <input type="checkbox" class="feature" value="frame" checked> frame 
+  <input type="checkbox" class="feature" value="hue" checked> hue 
   <input type="checkbox" class="feature" value="exif" checked> exif 
 </div>
 <hr />
