--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <input type="checkbox" class="feature" value="width" checked> width 
   <input type="checkbox" class="feature" value="height" checked> height 
   <input type="checkbox" class="feature" value="frame" checked> frame 
+  <input type="checkbox" class="feature" value="time" checked> time
   <input type="checkbox" class="feature" value="hue" checked> hue 
-  <input type="checkbox" class="feature" value="exif" checked> exif 
+  <input type="checkbox" class="feature" value="exif" checked> exif  
+  <input type="checkbox" class="feature" value="device" checked> device 
 </div>
 <hr />
 <div>
